# GhostCred

./: .env.example  .ghostcred.yml  .ghostcred.yml.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cli.py  compliance.py  config.py  decoys.py  integrations.py  plugin_manager.py  plugin_specs.py  pyproject.toml  rotation.py  setup.cfg
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  provider_request.yml
.github/workflows/: ghostcred-scan.yml  release.yml  security.yml  slsa-verify.yml
demo-repo/: README.md
demo-repo/.cursor/: mcp.json
demo-repo/ci-logs/: run-001.txt
docker/: Dockerfile.scanner  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  README.md
grafana/: README.md
grafana/dashboards/: ghostcred-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
lineage/: README.md  __init__.py  tracker.py
metrics/: README.md  __init__.py  prometheus_exporter.py
prometheus/: README.md  prometheus.yml
revocation/: README.md  __init__.py  anthropic_revoker.py  aws_revoker.py  base.py  default_plugins.py  github_revoker.py  openai_revoker.py
scanners/: README.md  __init__.py  ai_toolchain_scanner.py  base.py  code_scanner.py  patterns.py
scripts/: README.md  docker-build-guard.sh  mock_provider.py  pre-commit-hook.sh
tests/: README.md  conftest.py  test_cli.py  test_compliance.py  test_file_handling.py  test_fuzz_patterns.py  test_integrations.py  test_lineage.py  test_patterns.py  test_scanners.py
