[project]
name = "ghostcred"
version = "0.1.0"
description = "AI dev toolchain secret leak detector, lineage tracker, and auto-revoker"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1,<9",
    "requests>=2.31,<3",
    "pyyaml>=6.0,<7",
    "prometheus-client>=0.20,<1",
    "pluggy>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
    "hypothesis>=6.98,<7",
    "mutmut>=2.4,<3",
]
# AWS support (future): pip install ghostcred[aws]
aws = ["boto3>=1.34,<2"]

[project.scripts]
ghostcred = "ghostcred.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# The repo directory itself is the `ghostcred` package.
# `pip install -e .` must be run from the PARENT of this directory (c:\Users\vinee\Downloads\)
# OR use the setup.cfg workaround below.
# For local development, run: pip install -e . --no-build-isolation
# with PYTHONPATH set to the parent of this directory.
#
# Simplest path: run tests and the CLI from the Downloads/ parent dir so that
# `import ghostcred` resolves to this folder.
[tool.setuptools]
packages = ["ghostcred", "ghostcred.scanners", "ghostcred.lineage", "ghostcred.revocation", "ghostcred.metrics"]
package-dir = {"ghostcred" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
